=========
Changelog
=========

Here you can find the recent changes to tmuxp

- :release:`1.2.4 <2017-01-13>`
- :bug:`198` bump click from 6.6 to 6.7
- :support:`195` pin packages for colorama and doc requirements

- :release:`1.2.3 <2016-12-21>`
- :support:`-` bump libtmux 0.6.0 to 0.6.1
- :support:`193` improve suppress history test, courtesy of @abeyer.
- :support:`191` documentation typo from @modille
- :support:`186` documentation typo from @joelwallis

- :release:`1.2.2 <2016-09-16>`
- :bug:`181` Support tmux 2.3

- :release:`1.2.1 <2016-09-16>`
- :bug:`132` Handle cases with invalid session names
- :support:`- backported` update libtmux from 0.5.0 to 0.6.0

- :release:`1.2.0 <2016-06-16>`
- :feature:`65` Ability to specify ``options`` and ``global_options`` via
  configuration. Also you can specify environment variables via that.

  Include tests and add example.

- :release:`1.1.1 <2016-06-02>`
- :bug:`167 backported` fix attaching multiple sessions
- :bug:`165 backported` fix typo in error output, thanks @fpietka
- :support:`166 backported` add new docs on zsh/bash completion
- :feature:`- backported` Add back ``tmuxp -V`` for version info

- :release:`1.1.0 <2016-06-01>`
- :feature:`160` load tmuxp configs by name
- :feature:`134` Use ``click`` for command-line completion, Rewrite command
  line functionality for importing, config finding, conversion and prompts.
- :support:`-` Remove ``-l`` from ``tmuxp import tmuxinator|teamocil``
- :bug:`158 major` argparse bug overcome by switch to click


- :release:`1.0.2 <2016-05-25>`
- :support:`163 backported` fix issue re-attaching sessions that are already loaded
- :feature:`159 backported` improved support for tmuxinator imports, from @fpietka.
- :support:`161 backported` readme link fixes from @Omeryl.

- :release:`1.0.1 <2016-05-25>`
- :support:`- backported` switch to readthedocs.io for docs
- :support:`157 backported` bump libtmux to 0.4.1

- :release:`1.0.0-rc1 <2016-05-25>`