@@ -1,7 +1,7 @@
 -r ./base.txt
 docutils==0.13.1
-requests[security]==2.12.4
-sphinx==1.5.1
+requests[security]==2.13.0
+sphinx==1.5.2
 reportlab==3.3.0
 alabaster==0.7.9
 releases==1.3.0 # Updated from 1.2.0
